tests/baselines/reference/parserComputedPropertyName8(strict=true).errors.txt
parserComputedPropertyName8.ts(2,11): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
parserComputedPropertyName8.ts(2,11): error TS7008: Member '[e]' implicitly has an 'any' type.
parserComputedPropertyName8.ts(2,12): error TS2304: Cannot find name 'e'.


==== parserComputedPropertyName8.ts (3 errors) ====
    class C {
       public [e]
              ~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
              ~~~
!!! error TS7008: Member '[e]' implicitly has an 'any' type.
               ~
!!! error TS2304: Cannot find name 'e'.
    }